--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/consultar-editar-bitacora/consultar-editar-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/consultar-editar-bitacora/consultar-editar-bitacora.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <h1 class="title-menu--h1">
-        {{ ultimaBitacora.registroCompletoMuestras !== false ? 'Consultar/Editar' : 'Consultar' }} bitácora {{ ultimaBitacora.llaveMen }}
+        {{ ultimaBitacora.registroCompletoMuestras === false ? 'Consultar/Editar' : 'Consultar' }} bitácora {{ ultimaBitacora.llaveMen }}
     </h1>
 
     <div class="d-flex justify-content-center colorMainColor mt-1em">
