--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
@@ -172,7 +172,7 @@
                                     <div class="col-md-12">
                                       <div class="row">
                                         <div class="pr-1">
-                                          <label class="label-left">Fecha proyectada de entrega de resultados</label>
+                                          <label class="label-left">Entrega proyectada de resultados</label>
                                         </div>
                                         <div class="col d-flex">
                                             <mat-form-field>
