--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/registrar-entrega/registrar-entrega.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/registrar-entrega/registrar-entrega.component.html
@@ -35,7 +35,7 @@
             Recorrido de la obra
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-form-recorrido-obra [id]="id"></app-form-recorrido-obra>
+        <app-form-recorrido-obra [id]="id" (callOnInitParent)="ngOnInit()"></app-form-recorrido-obra>
 
       </mat-expansion-panel>
       <mat-expansion-panel class="expansion-style">
@@ -47,7 +47,7 @@
             Remisión a ETC de documentos técnicos a la ETC
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-form-remision [id]="id"></app-form-remision>
+        <app-form-remision [id]="id" (callOnInitParent)="ngOnInit()"></app-form-remision>
       </mat-expansion-panel>
       <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header">
@@ -59,7 +59,7 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <app-form-acta-entrega-bienes-y-servicios [id]="id"></app-form-acta-entrega-bienes-y-servicios>
+        <app-form-acta-entrega-bienes-y-servicios [id]="id" (callOnInitParent)="ngOnInit()"></app-form-acta-entrega-bienes-y-servicios>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
