--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-contratacion/form-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-contratacion/form-contratacion.component.html
@@ -91,16 +91,18 @@
                   
                 </div>
               </section>
-              <p><b>Adjuntar documento suscrito</b>: {{ form.get( 'documento' ).value }} </p>
+              <p><b>Url con soporte</b>: {{ form.get( 'rutaDocumento' ).value }} </p>
             </mat-card-content>
           </mat-card>
         </div>
 
+        <!--
         <div class="text-center" style="width: 20%;display: inline-block;">
           <button mat-raised-button color="accent" class="btn-table" (click)="getDocumento( form.get( 'rutaDocumento' ).value )">
             Descargar documento
           </button>
         </div>
+        -->
 
       </mat-expansion-panel>
     </mat-accordion>
