--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-registro-tramite/form-registro-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-registro-tramite/form-registro-tramite.component.html
@@ -64,7 +64,7 @@
         </quill-editor>
       </div>
       <span class="contador miles" *ngIf="dataFormulario.get('observaciones').value !== null" style="margin-top: 2.2em">
-        {{ 2000 - textoLimpio( observaciones.quillEditor,1000 ) }}
+        {{ 2000 - textoLimpio( observaciones.quillEditor, 2000 ) }}
       </span>
       <span class="contador miles" *ngIf="dataFormulario.get('observaciones').value === null" style="margin-top: 2.2em">
         2000
@@ -99,9 +99,9 @@
       <div class="input" style="width: 88%">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput type="url" required formControlName="rutaDocumento" maxlength="300" />
+            <input matInput type="url" required formControlName="rutaDocumento" maxlength="400" />
           </mat-form-field>
-          <span class="info-url">indique la ruta donde se encuentra la minuta del contrato</span>
+          <span class="info-url">Indique la ruta donde se encuentra la minuta del contrato.</span>
         </div>
         <span class="icon-incompleto pr-3em">
           <img
