--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -96,7 +96,17 @@
                                 *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion
                                         || element.estadoCodigo === this.listaEstadoSolicitudPago.enProcesoAutorizacion
                                         || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaVerificacionFinanciera
-                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision">
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaPorGenerarOrdenGiroParaEquipoFacturacion
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudRechazadaPorVerificacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudRechazadaPorValidacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaSubsanacionVerificacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enProcesoValidacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enProcesoVerificacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviarParaValidacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaParaOrdenGiro
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador">
                                 Ver detalle
                         </button>
 
@@ -142,7 +152,17 @@
                                 *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enviadaAutorizacion
                                         || element.estadoCodigo === this.listaEstadoSolicitudPago.enProcesoAutorizacion
                                         || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaVerificacionFinanciera
-                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision">
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaPorGenerarOrdenGiroParaEquipoFacturacion
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudRechazadaPorVerificacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudRechazadaPorValidacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaSubsanacionVerificacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enProcesoValidacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enProcesoVerificacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviarParaValidacionFinanciera
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.enviadaParaOrdenGiro
+                                        || element.estadoCodigo === this.listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador">
                                 Ver detalle
                         </button>
 
