--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.scss
@@ -16,6 +16,18 @@
             color: #fff;
         }
     }
+    &--btn2 {
+      padding: .5em 2em;
+      width: 32%;
+      box-shadow: none;
+      border: solid 1px #fff;
+
+      &.active {
+          background-color: #0A244F;
+          z-index: 1;
+          color: #fff;
+      }
+    }
   }
   .botones button{
     line-height: 1.2;
