--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/verdetalleeditar-traslado-gbftrec/verdetalleeditar-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/verdetalleeditar-traslado-gbftrec/verdetalleeditar-traslado-gbftrec.component.html
@@ -15,7 +15,7 @@
         <mat-card-content align="left">
             <p><strong>Tipo de intervención: </strong><em>Remodelación</em></p>
             <p><strong>Institución Educativa: </strong><em>I.E Nuestra Señora Del Carmen</em></p>
-            <p><strong>Sede: </strong><em>Única Sede</em></p>
+            <p><strong>Sede educativa: </strong><em>Única Sede</em></p>
             <p><strong>Departamento: </strong><em>Boyacá</em></p>
             <p><strong>Municipio: </strong><em>Susacón</em></p>
             <p><strong>Número DDP: </strong><em>DDP_0001</em></p>
