--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/vigencias-valor-rapg/vigencias-valor-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/vigencias-valor-rapg/vigencias-valor-rapg.component.html
@@ -141,6 +141,8 @@
                 Seguro 2
             </mat-panel-title>
         </mat-expansion-panel-header>
+        <!--
+            (dbenitez, se dejo comentado ya que es el mismo formulario donde llama los seguros correspondientes)
         <mat-card class="shipping-card">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text">
@@ -261,5 +263,6 @@
                 </div>
             </mat-card-content>
         </mat-card>
+        -->
     </mat-expansion-panel>
 </mat-accordion>
