--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/gestionar-balan-financ-trasl-rec/gestionar-balan-financ-trasl-rec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/gestionar-balan-financ-trasl-rec/gestionar-balan-financ-trasl-rec.component.html
@@ -21,6 +21,15 @@
             fueron ejecutados en el marco de la gestión del FFIE.
         </div>
     </div>
+    <div class="busqueda">
+        <mat-form-field appearance="outline" class="busqueda--input">
+            <mat-label>Buscador / Filtro</mat-label>
+            <input matInput #filtro (keyup)="applyFilter($event)">
+        </mat-form-field>
+        <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
+            <img src="assets/img/icon/lupa.svg" alt="Buscar">
+        </button>
+    </div>
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaTerminacionProyecto">
@@ -41,9 +50,10 @@
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.institucionEducativa }} </td>
             </ng-container>
             <ng-container matColumnDef="sede">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede Educativa</th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.sede }} </td>
             </ng-container>
+            <!--
             <ng-container matColumnDef="numeroTraslados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslados </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroTraslados }} </td>
@@ -52,6 +62,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del balance </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoBalance }} </td>
             </ng-container>
+            -->
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
