--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
     <mat-card class="shipping-card">
         <mat-card-content>
             <div class="row">
@@ -147,19 +147,19 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="tipoActualizacion" [ngClass]="{
+                                <label class="label-left" for="tipoActualizacion1" [ngClass]="{
                               'color-secondaryColor':
-                                (addressForm.get('tipoActualizacion').invalid &&
-                                  addressForm.get('tipoActualizacion').touched) ||
-                                (addressForm.get('tipoActualizacion').invalid && estaEditando)
+                                (addressForm.get('tipoActualizacion1').invalid &&
+                                  addressForm.get('tipoActualizacion1').touched) ||
+                                (addressForm.get('tipoActualizacion1').invalid && estaEditando)
                             }">Tipo de actualización</label>
                             </div>
                             <div class="col">
                                 <mat-form-field class="select-width">
-                                    <mat-select formControlName="tipoActualizacion" multiple required>
-                                        <mat-option *ngFor="let tipoActualizacion of tipoActualizacionArray"
-                                            [value]="tipoActualizacion">
-                                            {{ tipoActualizacion.nombre }}
+                                    <mat-select formControlName="tipoActualizacion1" multiple required>
+                                        <mat-option *ngFor="let tipoActualizacion1 of tipoActualizacionArray"
+                                            [value]="tipoActualizacion1">
+                                            {{ tipoActualizacion1.nombre }}
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
@@ -169,8 +169,8 @@
                                     alt="este campo es requerido" [matTooltipPosition]="'above'"
                                     matTooltip="Debe ingresar la información en el campo para continuar"
                                     matTooltipClass="info-tooltip" *ngIf="
-                              (addressForm.get('tipoActualizacion').invalid && addressForm.get('tipoActualizacion').touched) ||
-                              (addressForm.get('tipoActualizacion').invalid && estaEditando)
+                              (addressForm.get('tipoActualizacion1').invalid && addressForm.get('tipoActualizacion1').touched) ||
+                              (addressForm.get('tipoActualizacion1').invalid && estaEditando)
                             " />
                             </span>
                         </div>
